[metadata]
description = Japanese UniDic packaged for Python
url = https://github.com/polm/unidic-py
author = "Paul O'Leary McCann"
author_email = polm@dampfkraft.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Natural Language :: Japanese

[options]
include_package_data = True
python_requires = >=3.5
install_requires =
    requests>=2.22.0,<3.0.0
    tqdm>=4.41.1,<5.0.0
    wasabi>=0.6.0,<1.0.0
    plac>=1.1.3,<2.0.0
